--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,10 @@ cache:
     - $HOME/.composer/cache
 
 before_script:
+  - cp .env.example .env
   - travis_retry composer self-update
   - travis_retry composer update --no-interaction --prefer-dist
+  - php artisan key:generate
 
 script:
   - vendor/bin/phpunit
