--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,3 +1,9 @@
 location / {
-    try_files $uri $uri/ /index.php?$query_string;
+    # try to serve file directly, fallback to rewrite
+    try_files $uri @rewriteapp;
+}
+
+location @rewriteapp {
+    # rewrite all to app.php
+    rewrite ^(.*)$ /index.php$1 last;
 }
